feat(itinerary-body): add AlightStepContent prop
Adds an optional AlightStepContent prop to ItineraryBody that renders
custom content below each non-last transit leg body when provided.

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -92,6 +92,7 @@ otpUi:
       likelyAccessible: likely accessible
       unclear: unknown
     viewOnMap: View on map
+    alightAt: Get off at {stopName}.
   TransitLegBody:
     AlertsBody:
       alertLinkText: See alert on {agency} website
