--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -16,7 +16,7 @@ otpUi:
       walkVehicle: Emmenez à pied le véhicule le long de {place}
     TncLeg:
       bookRide: Réserver
-      bookRideLater: Attendez jusqu'à {timeMillis, time, short} avant de 
+      bookRideLater: Attendez jusqu'à {timeMillis, time, short} avant de
         réserver
       estimatedCost: "Coût estimé : {minFare} - {maxFare}"
       estimatedTravelTime: >-
@@ -80,12 +80,14 @@ otpUi:
       durationShort: >-
         {approximatePrefix, select, true {Environ } other {}}{hours, plural, =0
         {} other {# h }}{minutes} min
-    flexAdvanceNotice: " au moins {leadDays, plural, one {# jour} other {# jours}}
+    alightAt: Descendez à {stopName}.
+    flexAdvanceNotice:
+      " au moins {leadDays, plural, one {# jour} other {# jours}}
       à l'avance"
     flexBookingUrl: <link>reserve your trip online</link>
     flexCallAhead: réserver au préalable
     flexCallNumber: réserver au {phoneNumber}
-    flexPickupMessage: Pour emprunter cette ligne, vous devez 
+    flexPickupMessage: Pour emprunter cette ligne, vous devez
       {action}{advanceNotice}.
     stayOnBoard: Restez à bord à {place}
     travelBy: Trajet {mode}
@@ -121,7 +123,8 @@ otpUi:
     legDetails: Détails de l'étape
     operatedBy: Exploité par {agencyLink}
     ride: Prenez la ligne
-    rideDurationAndStops: "Trajet : {duration}{numStops, plural, =1 {} other { / #
+    rideDurationAndStops:
+      "Trajet : {duration}{numStops, plural, =1 {} other { / #
       arrêts}}"
     routeDescription: "{routeName} <toPrefix>vers</toPrefix> {headsign}"
     stopId: Arrêt n°{stopId}
