feat(itinerary-body): add HeaderSequenceContent slot to PlaceRow
Adds an optional HeaderSequenceContent prop to ItineraryBody/PlaceRow
that renders a sequence header above the place title in each row. When
provided, the CSS grid expands to three rows to accommodate it. Includes
a default HeaderSequence component that renders a numbered label with
the transit route or "Walk" text.

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -68,6 +68,8 @@ otpUi:
       car: Car
       escooter: E-scooter
       vehicle: Vehicle
+  HeaderSequence:
+    walk: Walk
   ItineraryBody:
     common:
       durationShort: >-
