--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -75,6 +75,8 @@ otpUi:
       car: Voiture
       escooter: Trottinette
       vehicle: Véhicule
+  HeaderSequence:
+    walk: Marche
   ItineraryBody:
     common:
       durationShort: >-
